# 2d-Robot-dog-Simulation

./: 2d_sim.py  DEVELOPMENT_NOTES.txt  DISTRIBUTION_GUIDE.md  LIBRARY_USAGE.md  PROJECT_OVERVIEW.txt  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.txt  PUBLICATION_GUIDE.txt  PYTHON_SETUP_GUIDE.md  README.md  STUDENT_SETUP_GUIDE.md  build_and_upload.py  install_robot_sim.py  professor_demo.py  pyproject.toml  quick_demo.py  requirements.txt  setup.py  setup_venv.bat  setup_venv.ps1  test_randomization.py  verify_structure.py  web_simulator.py
docs/: email_to_professor.md
examples/: custom_walls_example.py  library_usage_examples.py  minimal_api_examples.py  student_example.py  student_playground.py  student_template.py  test.py
robot_behavior/: __init__.py  minimal_api.py
robot_behavior/behaviors/: api.py  basic.py
robot_behavior/core/: robot.py
robot_behavior/simulator/: enhanced_simulator.py  minimal_simulator.py  simulator.py
tests/: test_robot.py  test_robot_behavior.py
